# BNL-Max-Externals

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  bc.externals.notarized.dmg  bnl.Info.plist  bnl.max.xcconfig  bnl.maxsdk.xcconfig  sign-all+dmg-notarize+staple_mac-externals.zsh  sign_all_mac-externals.zsh
Tempo/: large.c  large.xcconfig  toiviainen.c  toiviainen.xcconfig
Tempo/large.xcodeproj/: project.pbxproj
Tempo/large.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tempo/large.xcodeproj/project.xcworkspace/xcuserdata/BenCello.xcuserdatad/: UserInterfaceState.xcuserstate
Tempo/large.xcodeproj/project.xcworkspace/xcuserdata/blevy.xcuserdatad/: UserInterfaceState.xcuserstate
Tempo/large.xcodeproj/project.xcworkspace/xcuserdata/jaimechao.xcuserdatad/: UserInterfaceState.xcuserstate
Tempo/large.xcodeproj/xcshareddata/xcschemes/: max-external.xcscheme
Tempo/large.xcodeproj/xcuserdata/jaimechao.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
Tempo/large.xcodeproj/xcuserdata/jaimechao.xcuserdatad/xcschemes/: xcschememanagement.plist
Tempo/tempo.large.xcodeproj/: project.pbxproj
Tempo/tempo.large.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tempo/tempo.toiviainen.xcodeproj/: project.pbxproj
Tempo/tempo.toiviainen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tempo/toiviainen.xcodeproj/: jaimechao.mode1v3  jaimechao.pbxuser  project.pbxproj
Tempo/toiviainen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tempo/toiviainen.xcodeproj/project.xcworkspace/xcuserdata/blevy.xcuserdatad/: UserInterfaceState.xcuserstate
Tempo/toiviainen.xcodeproj/project.xcworkspace/xcuserdata/jaimechao.xcuserdatad/: UserInterfaceState.xcuserstate
Tempo/toiviainen.xcodeproj/xcuserdata/blevy.xcuserdatad/xcschemes/: max-external.xcscheme
Tempo/toiviainen.xcodeproj/xcuserdata/jaimechao.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
aalert64/: CMakeLists.txt  aalert.c
bc.upnpc/: CMakeLists.txt  bc.upnpc.maxhelp
bc.upnpc/bc.upnpc.xcodeproj/: project.pbxproj
bc.upnpc/miniupnpc-2.1.20191224/: libminiupnpc.dylib  listdevices  upnpc-shared  upnpc-static
bc.virfun/: Info.plist  bnl.maxsdk.xcconfig
bc.virfun/bc.virfun.xcodeproj/: project.pbxproj
bc.virfun/bc.virfun.xcodeproj/project.xcworkspace/xcshareddata/: bc.virfun.xccheckout
bc.virfun/bc.virfun.xcodeproj/project.xcworkspace/xcuserdata/BenCello.xcuserdatad/: UserInterfaceState.xcuserstate
bc.virfun/bc.virfun.xcodeproj/xcuserdata/BenCello.xcuserdatad/xcschemes/: max-external.xcscheme
bc.yinstats/: bc.yinstats.vcxproj  max.xcconfig
bc.yinstats/bc.yinstats.xcodeproj/: project.pbxproj
bc.yinstats/bc.yinstats.xcodeproj/project.xcworkspace/xcuserdata/BenCello.xcuserdatad/: UserInterfaceState.xcuserstate
help/: aalert64.maxhelp  bc.upnpc.maxhelp  bc.virfun.maxhelp
source/: 4drone.txt  CMakeLists.txt  build-all_cmake+xcodeproj.zsh  clean-all_xcodeproj+cmake.zsh  sign-all+dmg-notarize+staple_mac-externals.zsh
source/_test/: CMakeLists.txt  midi_freqs.txt
source/aalert64/: CMakeLists.txt
source/bc.upnpc/: 4drone.txt  CMakeLists.txt  bc.upnpc.c
source/bc.virfun/: CMakeLists.txt  bc.virfun.c  bc.virfun.h  bc.virfun.test.cpp
source/bc.yinstats/: CMakeLists.txt
source/scripts/: dmg-notarize+staple_mac-externals.zsh  sign-all_mac-externals.zsh
source/tempo.large/: CMakeLists.txt
source/tempo.toiviainen/: CMakeLists.txt
source/test/: CMakeLists.txt
tempo.large/: CMakeLists.txt
tempo.toiviainen/: CMakeLists.txt
